# wasm2env

./: .gitignore  Cargo.toml  README.md  Rustler_usage.md  mcp_component.wasm  openai_component.wasm  wasm2env
.github/workflows/: ci.yml
scripts/: build-test-fixtures.sh
src/: analysis.rs  extract.rs  lib.rs  main.rs  stack.rs  strings.rs
test-components/: .gitignore
test-components/conditional-env/: Cargo.toml
test-components/conditional-env/src/: main.rs
test-components/config-and-env/: Cargo.toml
test-components/config-and-env/src/: lib.rs
test-components/config-and-env/wit/: world.wit
test-components/config-conditional/: Cargo.toml
test-components/config-conditional/src/: lib.rs
test-components/config-conditional/wit/: world.wit
test-components/config-many/: Cargo.toml
test-components/config-many/src/: lib.rs
test-components/config-many/wit/: world.wit
test-components/config-multi/: Cargo.toml
test-components/config-multi/src/: lib.rs
test-components/config-multi/wit/: world.wit
test-components/config-nested/: Cargo.toml
test-components/config-nested/src/: lib.rs
test-components/config-none/: Cargo.toml
test-components/config-single/: Cargo.toml
test-components/env-with-digits/: Cargo.toml
test-components/false-positive-resistance/: Cargo.toml
test-components/many-vars/: Cargo.toml
test-components/multi-env/: Cargo.toml
test-components/nested-calls/: Cargo.toml
test-components/no-env/: Cargo.toml
test-components/scale-env/: Cargo.toml
test-components/single-env/: Cargo.toml
tests/: integration.rs
(+14 files in other folders)
