[package]
name = "wasm2env"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm2env"
path = "src/lib.rs"

[[bin]]
name = "wasm2env"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
wasmparser = "0.121"

[dev-dependencies]
rustler = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
