[package]
name = "wasm2env"
version = "0.1.0"
edition = "2021"
description = "Static analysis tool to detect environment variable dependencies from WASM binaries"
repository = "https://github.com/Aditya1404Sal/wasm2env"
license = "MIT"

[lib]
name = "wasm2env"
path = "src/lib.rs"

[[bin]]
name = "wasm2env"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
wasmparser = "0.121"
walrus = "0.22"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these common patterns
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
